templates/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: VAR_NAMESPACE
  labels:
    author: VAR_NAMESPACE
