templates/05-pod-demo-app-with-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-app-pod
  namespace: VAR_NAMESPACE
  labels:
    author: VAR_NAMESPACE
spec:
  containers:
  - name: demo-app
    image: radowan/demo-app
    ports:
      - containerPort: 8080
