templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-app
  namespace: VAR_NAMESPACE
spec:
  containers:
  - name: demo-app
    image: radowan/demo-app
