templates/08-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  labels:
    author: VAR_NAMESPACE
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: demo-app-pod
