templates/09-service-with-sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-with-sidecar
  labels:
    author: VAR_NAMESPACE
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: pod-with-sidecar
