templates/10-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    author: VAR_NAMESPACE
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths: 
      - path: /demo-app(/|$)(.*)
        backend:
          serviceName: demo-app-service
          servicePort: 8080
      - path: /app-with-sidecar(/|$)(.*)
        backend:
          serviceName: service-with-sidecar
          servicePort: 80
